Tweaked Governor LD, fixed Sibir not being a PU

--- a/UaCH/localisation/replace/UaCH_rename_countries_l_english.yml
+++ b/UaCH/localisation/replace/UaCH_rename_countries_l_english.yml
@@ -1,4 +1,4 @@
 l_english:
-    CHG:0 "Moghulistan"
-    CHG_ADJ:0 "Moghul"
-    CHG_ADJ2:0 "Moghul"
+    CHG: "Moghulistan"
+    CHG_ADJ: "Moghul"
+    CHG_ADJ2: "Moghul"
