Final map changes

--- a/UaCH/localisation/UaCH_countries_l_english.yml
+++ b/UaCH/localisation/UaCH_countries_l_english.yml
@@ -8,3 +8,9 @@
     BDK: "Badakhstan"
     BDK_ADJ: "Badakh"
     BDK_ADJ2: "Badakh"
+    SLU: "Salor"
+    SLU_ADJ: "Salor"
+    SLU_ADJ2: "Salor"
+    LRE: "Larestan"
+    LRE_ADJ: "Larestani"
+    LRE_ADJ2: "Larestani"
