--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -1,1 +1,8 @@
 ﻿l_english:
+
+  # Disaster loc
+  timurid_succession_crisis:0 "Timurid Succession Crisis"
+  desc_timurid_succession_crisis:0 "With succession currently unsoldified and with no strong ruler to keep the realm together, all the princes scheme for supremacy and fight for the Timurid throne."
+  uach_shah_rukh_or_death:0 "Either §YShah Rukh§! or a ruler that reunified the @TIM §YTimurids§! has died."
+  uach_nuh_uh:0 "§RThere is nothing to do but accept our fate.§!"
+  uach_via_timur_legacy_buttons:0 "This disaster will only end once someone uses either §YReclaim Timur's Legacy§! or §YEnd Timur's Legacy§!."
