--- a/UaCH/localisation/uach_gov_l_english.yml
+++ b/UaCH/localisation/uach_gov_l_english.yml
@@ -4,12 +4,13 @@
  supported_us_in_timurid_success_crisis: "Supported during Succession Crisis"
  UACH_GOV_REFORM_GVNR_COOLDOWN: "a succession crisis policy"
  uach_conscript_men_effect_tt: "Adds 3 base unrest to every province you control. This decays by 1 every year."
- UACH_GOV_RCS_TT: "You must be a timurid prince, and have at least 1 unoccupied province (that is not under seige) to raise support for your claimant."
+ UACH_GOV_RCS_TT: "You must be a Timurid prince, and have at least 1 unoccupied province (that is not under siege) to raise support for your claimant."
  uach_governor: "Timurid Governor"
  uach_governor_desc: "A Timurid Governor holds significant sway over a portion of the Timurid state, but does not themself have a claim to the Timurid throne."
  uach_prince: "Timurid Prince"
  uach_prince_desc: "A Timurid Prince is a potential claimant to the Timurid throne. When landed, they govern over a portion of the state."
- ability_uach_mechanics: "Succession Crisis Mechanics"
+ ability_uach_mechanics_prince: "Succession Crisis Mechanics"
+ ability_uach_mechanics_governor: "Succession Crisis Mechanics"
  uach_raise_claimant_support: "Raise Claimant Support"
  uach_request_foreign_support: "Request Foreign Assistance"
  uach_conscript_men: "Conscript our Citizens"
