--- a/UaCH/localisation/replace/UaCH_replace_l_english.yml
+++ b/UaCH/localisation/replace/UaCH_replace_l_english.yml
@@ -2,4 +2,4 @@
     CHG: "Moghulistan"
     CHG_ADJ: "Moghul"
     CHG_ADJ2: "Moghul"
-    factionalism:0 "Special Mechanics"
+    M_FACTION_BUTTON: "Special Mechanics"
