not even loading screen bruh but whatever screw it

--- a/UaCH/localisation/replace/UaCH_replace_l_english.yml
+++ b/UaCH/localisation/replace/UaCH_replace_l_english.yml
@@ -1,4 +1,7 @@
 ﻿l_english:
-    CHG: "Moghulistan"
-    CHG_ADJ: "Moghul"
-    CHG_ADJ2: "Moghul"
+ CHG: "Moghulistan"
+ CHG_ADJ: "Moghul"
+ CHG_ADJ2: "Moghul"
+ SHY: "Shaybanids"
+ SHY_ADJ: "Shaybanid"
+ SHY_ADJ_2: "Shaybanid"
