--- a/UaCH/localisation/uach_gov_l_english.yml
+++ b/UaCH/localisation/uach_gov_l_english.yml
@@ -2,15 +2,15 @@
  # gov reforms and abilities
  UACH_GOV_RFS_TOOLTIP: "Borders any nation not involved in the Timurid Succession Crisis"
  supported_us_in_timurid_success_crisis: "Supported during Succession Crisis"
- UACH_GOV_REFORM_GVNR_COOLDOWN: "a succession crisis policy"
- uach_conscript_men_effect_tt: "Adds 3 base unrest to every province you control. This decays by 1 every year."
+ UACH_GOV_REFORM_GVNR_COOLDOWN: "A succession crisis policy"
+ uach_conscript_men_effect_tt: "Adds §R3§! base unrest to every province you control. This decays by §G1§! every year."
  UACH_GOV_RCS_TT: "You must be a Timurid prince, and have at least 1 unoccupied province (that is not under siege) to raise support for your claimant."
  uach_governor: "Timurid Governor"
  uach_governor_desc: "A Timurid Governor holds significant sway over a portion of the Timurid state, but does not themself have a claim to the Timurid throne."
  uach_prince: "Timurid Prince"
  uach_prince_desc: "A Timurid Prince is a potential claimant to the Timurid throne. When landed, they govern over a portion of the state."
- ability_uach_mechanics_prince: "Succession Crisis Mechanics"
- ability_uach_mechanics_governor: "Succession Crisis Mechanics"
+ ability_uach_mechanics_prince: "Timurid Succession Crisis Policies"
+ ability_uach_mechanics_governor: "Timurid Succession Crisis Policies"
  uach_raise_claimant_support: "Raise Claimant Support"
  uach_request_foreign_support: "Request Foreign Assistance"
  uach_conscript_men: "Conscript our Citizens"
@@ -20,3 +20,4 @@
  uach_conscript_men_desc: "We will conscript some of our citizens. This regretably comes at a steep price for the state."
  uach_raise_a_tax_desc: "We will raise a new tax. This is sure to be unpopular among our citizens."
  WAIT_FOR_SC_TO_START_BITCH_TT: "The Timurid Succession Crisis mechanics are only available during the Succession Crisis."
+ UACH_GOV_REFORM_COOLDOWN": "A succession crisis policy"
