UI skeleton start

--- a/UaCH/localisation/replace/UaCH_replace_l_english.yml
+++ b/UaCH/localisation/replace/UaCH_replace_l_english.yml
@@ -1,8 +1,8 @@
-l_english:
- CHG: "Moghulistan"
- CHG_ADJ: "Moghul"
- CHG_ADJ2: "Moghul"
- M_FACTION_BUTTON: "Special Mechanics"
- SHY: "Shaybanids"
- SHY_ADJ: "Shaybanid"
- SHY_ADJ_2: "Shaybanid"
+﻿l_english:
+     CHG: "Moghulistan"
+     CHG_ADJ: "Moghul"
+     CHG_ADJ2: "Moghul"
+     M_FACTION_BUTTON: "Special Mechanics"
+     SHY: "Shaybanids"
+     SHY_ADJ: "Shaybanid"
+     SHY_ADJ_2: "Shaybanid"
