--- a/UaCH/localisation/UaCH_ideas_l_english.yml
+++ b/UaCH/localisation/UaCH_ideas_l_english.yml
@@ -7,8 +7,8 @@
  blk_legacy_of_bactria_desc:0 "A millennia ago, Balkh was among the most important cities of the Bactrian empire. This legacy should not only be remembered, but emulated."
  blk_umm_al_belad:0 "Umm al Bilad"
  blk_umm_al_belad_desc:0 "Being one of the oldest cities in Persia, no wonder the conquering Arabs named Balkh Umm-al-Bilad, the Mother of Cities."
- blk_crossroad_of_faiths_desc:0 "Before the Arab conquest, Balkh was a triving center of multiple faiths, a holy site to the Zoroastrians. While those times are long gone, and the majority of population is firmly Muslim now, some tolerance should take us even farther."
  blk_crossroad_of_faiths:0 "Nation of crossroads"
+ blk_crossroad_of_faiths_desc:0 "Before the Arab conquest, Balkh was a triving center of multiple faiths, a holy site to the Zoroastrians. While those times are long gone, and the majority of population is firmly Muslim now, some tolerance should take us even farther."
  blk_speedy_messengers:0 "Prepared messengers"
  blk_speedy_messengers_desc:0 "Genghis khan has taught us one very important lesson : being fast is the key. Our messengers stand ready to delivery messages every hour of the day."
  blk_rebuild_citadel:0 "Rebuilding effort"
@@ -16,3 +16,75 @@
  BLK_ideas:0 "Balkh ideas"
  BLK_ideas_start:0 "Balkh traditions"
  BLK_ideas_bonus:0 "Balkh ambition"
+ 
+ yzd_idea_1:0 "Zoroastrian Legacy"
+ yzd_idea_1_desc:0 "Embracing the ancient wisdom of Zarathustra, our people uphold tolerance and unity.Wise scholars grace our courts, guiding our nation with their counsel."
+ yzd_idea_2:0 "Bazaars of Yazd"
+ yzd_idea_2desc:0 "Our caravans traverse the Silk Road, weaving prosperity across distant lands.Merchant guilds thrive within our bustling bazaars, enriching our trade ventures. "
+ yzd_idea_3:0 "Sar Yazd Castle"
+ yzd_idea_3_desc:0 "Amidst the unforgiving desert, our fortresses stand as bastions of endurance.Chief among them is the Sar Yazd Castle, an ancient fortress of the Sassanids, standing the test of time."
+ yzd_idea_4:0 "Qanats of Prosperity"
+ yzd_idea_4_desc:0 "Beneath the arid earth, our qanat irrigation sustains fields of abundance, supplying our city and troops with fresh water even in the greatest drought."
+ yzd_idea_5:0 "Stargazers of Yazd"
+ yzd_idea_5_desc:0 "The Zoroastrians have revered the Sun and the Stars, and the practice of stargazing has snuck into our culture. Atop our ancient observatories, we decipher the celestial tapestry, unraveling the mystical secrets of our world."
+ yzd_idea_6:0 "Diplomatic Fortitude"
+ yzd_idea_6_desc:0 "In the hallowed halls of Ahmadabad, our envoys weave webs of alliance and intrigue, shaping the destiny of nations. "
+ yzd_idea_7:0 "Dahouk Mosque"
+ yzd_idea_7_desc:0 "Also known as the Amir Chakhmaq Complex, this religious establishment has finished building in 1438 under Jalal-al-Din Amir-Chakhmaq's watchful eyes."
+ YZD_ideas:0 "Yazdi ideas"
+ YZD_ideas_start:0 "Yazdi traditions"
+ YZD_ideas_bonus:0 "Yazdi ambition"
+ 
+ isf_idea_1:0 "Marco Polos Great and Noble City"
+ isf_idea_1_desc:0 "Before Genghis and his horde came to our city, its splendor was so great, that even the great traveller Marco Polo has named us 'The Great and Noble City' in his memoirs."
+ isf_idea_2:0 "Trade hub"
+ isf_idea_2desc:0 "Our city was always an important trade hub along the Silk Road"
+ isf_idea_3:0 "Legacy of Bactria"
+ isf_idea_3_desc:0 "A millennia ago, Balkh was among the most important cities of the Bactrian empire. This legacy should not only be remembered, but emulated."
+ isf_idea_4:0 "Umm al Bilad"
+ isf_idea_4_desc:0 "Being one of the oldest cities in Persia, no wonder the conquering Arabs named Balkh Umm-al-Bilad, the Mother of Cities."
+ isf_idea_5:0 "Nation of crossroads"
+ isf_idea_5_desc:0 "idea 5 desc"
+ isf_idea_6:0 "Prepared messengers"
+ isf_idea_6_desc:0 "Genghis khan has taught us one very important lesson : being fast is the key. Our messengers stand ready to delivery messages every hour of the day."
+ isf_idea_7:0 "Rebuilding effort"
+ isf_idea_7_desc:0 "Shah Rukh has expended considerable effort to restore the citadel of Balkh."
+ ISF_ideas:0 "Isfahani ideas"
+ ISF_ideas_start:0 "Isfahani traditions"
+ ISF_ideas_bonus:0 "Isfahani ambition"
+ 
+ krm_idea_1:0 "Nomadic Heritage"
+ krm_idea_1_desc:0 ""
+ krm_idea_2:0 "Whispers of the Desert Wind"
+ krm_idea_2desc:0 "With every gust, our enemies falter, for the desert is our shield and our sword, and our fortresses stand as monuments to our resilience."
+ krm_idea_3:0 ""
+ krm_idea_3_desc:0 ""
+ krm_idea_4:0 ""
+ krm_idea_4_desc:0 ""
+ krm_idea_5:0 ""
+ krm_idea_5_desc:0 ""
+ krm_idea_6:0 ""
+ krm_idea_6_desc:0 ""
+ krm_idea_7:0 "Caravans of Dreams"
+ krm_idea_7_desc:0 "Along ancient routes, our caravans traverse, carrying with them the dreams of a nation."
+ KRM_ideas:0 "Kermani ideas"
+ KRM_ideas_start:0 "Kermani traditions"
+ KRM_ideas_bonus:0 "Kermani ambition"
+ 
+ #krm_idea_1:0 ""
+ #krm_idea_1_desc:0 ""
+ #krm_idea_2:0 ""
+ #krm_idea_2desc:0 ""
+ #krm_idea_3:0 ""
+ #krm_idea_3_desc:0 ""
+ #krm_idea_4:0 ""
+ #krm_idea_4_desc:0 ""
+ #krm_idea_5:0 ""
+ #krm_idea_5_desc:0 ""
+ #krm_idea_6:0 ""
+ #krm_idea_6_desc:0 ""
+ #krm_idea_7:0 ""
+ #krm_idea_7_desc:0 ""
+ #krm_ideas:0 "Kermani ideas"
+ #krm_ideas_start:0 "Kermani traditions"
+ #krm_ideas_bonus:0 "Kermani ambition"
