Fixing the Kerman startup loc to reflect the actual ruler

--- a/UaCH/localisation/UaCH_startup_l_english.yml
+++ b/UaCH/localisation/UaCH_startup_l_english.yml
@@ -28,7 +28,7 @@
 
  string_screen_title_KRM:0"Kerman - The City of Stars"
  string_start_title_KRM:0"The situation of Kerman in 1444"
- string_start_KRM:0 "From Shahdad's sands to Arg-e-Bam's walls,\nKerman's spirit in every call.\nIn every sunset, in every dawn,\nKerman's essence forever drawn.\n - §YChatGPT§! \n\n §RHistory§! \n\n In 1381, during one of his first campaigns, §GTimur§! has conquered the city of Kerman, razing it to the ground. Almost 50 years later the city has been rebuilt as its location on the Silk Road offers many advantages for both trade and diplomacy.\n\n §RRuler§! \n\n In 1444, Kerman is governed by the old §GZain al-Abidin§!, of the Mozzafarid dynasty. Old and frail, he is unlikely to be a real contender for Timur's throne even in the unlikely case of surviving §GShah Rukh§!  "
+ string_start_KRM:0 "From Shahdad's sands to Arg-e-Bam's walls,\nKerman's spirit in every call.\nIn every sunset, in every dawn,\nKerman's essence forever drawn.\n - §YChatGPT§! \n\n §RHistory§! \n\n In 1381, during one of his first campaigns, §GTimur§! has conquered the city of Kerman, razing it to the ground. Almost 50 years later the city has been rebuilt as its location on the Silk Road offers many advantages for both trade and diplomacy.\n\n §RRuler§! \n\n In 1444, Kerman is governed by §GHajji Muhammad§!, son of Ghunaxirin, who was appointed to the position by §GShah Rukh§! himself. Whilst not seeking to forge much of his own destiny, having found himself aligned with §GMuhammad bin Baysonqor§!, perhaps he will change his mind..."
  
  string_screen_title_ISF:0"Isfahan - The Rallying Point"
  string_start_title_ISF:0"The situation of Isfahan in 1444"
