Add Herat tag for events

--- a/UaCH/localisation/UaCH_countries_l_english.yml
+++ b/UaCH/localisation/UaCH_countries_l_english.yml
@@ -3,8 +3,8 @@
     BLK_ADJ: "Balkh"
     BLK_ADJ2: "Balkh"
     KHU: "Khutallan"
-    KHU_ADJ: "Khutallan"
-    KHU_ADJ2: "Khutallan"
+    KHU_ADJ: "Khutal"
+    KHU_ADJ2: "Khutal"
     BDK: "Badakhstan"
     BDK_ADJ: "Badakh"
     BDK_ADJ2: "Badakh"
@@ -14,3 +14,6 @@
     LRE: "Larestan"
     LRE_ADJ: "Larestani"
     LRE_ADJ2: "Larestani"
+    HER: "Herat"
+    HER_ADJ: "Herati"
+    HER_ADJ2: "Herati"
