--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -10,3 +10,355 @@
   # UI loc
   timurid_faction: "Timurid Envoys"
   # No need to define the rest of the faction
+
+  UaCH.1.t:0 "The Ailing Emperor"
+  UaCH.1.d:0 "Early in 1444, §GShah Rukh Mirza§!, ruler of the Timurid empire, youngest son of §GTimur§!, has fallen ill. While the nature of his illness is not disclosed outside his court, news are spreading that he will not survive the year. This news had sent the royal family and the high nobles into a frenzied preparation for chaos, as Shah Rukh's designated successor has died a few years prior. Many elders still remember the days after Timurs death followed by a decade of campaigning before relative peace could return to the land.\n\nIn the north, Shah Rukhs last surviving child, the scholarly §GUlugh beg§! and his ambitious son §GAbdal Latif§!, long time viceroy of §YTransoxiana§! are already putting plans in motion.\n The de facto independent prince of §YAjam§!, §GSultan Muhammad§! is eyeing the neighbouring §YIsfahan§!, where the old and decrepit §GMahmudshah§! is still clinging to power.\nShah Rukh's favorite grandson §GMuhammad Juki§!, the governor of §YBalkh§! is more than willing to step up, but there are rumors about him being ill too.\nAnother grandson, amir of §YHerat§!, §GAla al-Dawla Mirza§! is also eyeing the throne and gathering his armies, with the full support of his grandmother,Shah Rukhs chief consort §GGawhar Shad§! ." 
+  UaCH.1.a:0 "To the strongest!"
+  UaCH.2.t:0"Secret Plot"
+ UaCH.2.d:0"Firzushah plotting, Muhammad Juki discovers"
+ #TODO
+ UaCH.2.a:0"Remove Firuzshah from his position."
+ UaCH.2.b:0"A stern talk should do the trick."
+ 
+ UaCH.3.t:0"Fate of Firuzshah"
+ UaCH.3.d:0"Disgraced, Fzsh dies from mystery illness" 
+ UaCH.3.a:0"Shame" 
+ #TODO
+ 
+ UaCH.4.t:0"Gawhar Shad’s Regency"
+ UaCH.4.d:0" * gasp *" #TODO, what else
+ UaCH.4.a:0"One small scuffle is nothing"
+ UaCH.4.b:0"I’m sorry, my love, but I’ve seen your intentions."
+ 
+ UaCH.5.t:0"Illness of Muhammad Juki"
+ UaCH.5.d:0"Muhamad juki falls mysteriously chronical ill"
+ UaCH.5.a:0"Chronic illness? Why do I hear about this only now?"
+ UaCH.5.b:0"Chronic illness you say?"
+ #Replace Muhammad Juki with his son Abu Bakr he dies
+ 
+ UaCH.6.t:0"Conspiring in Isfahan"
+ UaCH.6.d:0"Sultan Muhammad received letters from the nobles of Isfahan, requesting that he seize power from Mahmudshah, who was seventy years old and severely ill."
+ UaCH.6.a:0"A golden opportunity!"
+ UaCH.6.b:0"Open our coffers for them."
+ UaCH.6.c:0"We only need to wait for their downfall."
+ 
+ UaCH.7.t:0"Choosing a successor"
+ UaCH.7.d:0"My liege. There has been enough time to mourn, our nobles are getting worried about not having a designated sucessor. Please choose. Very please. " #TODO
+ UaCH.7.a:0"The favorite of the Nobility, §GAla-al Dawla Mirza§!"
+ UaCH.7.b:0"My most prosperous son, §GUlugh Beg§!."
+ UaCH.7.c:0"My favorite, §GMuhammad Juki§!"
+ UaCH.7.d:0"There is still time for this…"
+ 
+ UaCH.8.t:0"Rebellion in Isfahan"
+ UaCH.8.d:0"Sultan Muhammad arrived in Isfahan on the request of its nobles, declaring an amnesty on taxes and staged a magnificent feast. "
+ UaCH.8.a:0"Send our demands to the governors!"
+ UaCH.8.b:0"Expel him, lest you bring Shah Rukhs wrath on our head!"
+ 
+ UaCH.9.t:0"Muhammads demands"
+ UaCH.9.d:0"We have received a letter from §GSultan Muhammad§!, crown prince of Ajam. He states that he is the true successor of §GShah Rukh§!, and is taking over the Empire as of today. Not only is his letter filled to the brim with arrogance and self righteousness, but he dares to demand fealty from us!"
+ UaCH.9.a:0"Submit"
+ UaCH.9.b:0"We won't have anything with that upstart."
+ UaCH.9.a:0"HOW DARES HE."
+
+ UaCH.10.t:0"Sultan Muhammad is victorious"
+ UaCH.10.d:0"§GSultan Muhammad§! has gathered the full might of the western empire behind him, and emerged victoriously in this debacle. The bloody conflict seems to have ended with him taking over Isfahan, while the other princes and governors are forced to retreat and lick their wounds. For how long, nobody is sure."
+ UaCH.10.a:0"A glorious day."
+
+ UaCH.11.t:0"Sultan Muhammad is victorious"
+ UaCH.11.d:0"§GSultan Muhammad§! has emerged victorious from the Isfahan rebellion. Now that the campaign is over, and his enemies are in retreat, he demands us oaths of obedience as the new Emperor."
+ UaCH.11.a:0"Submit"
+
+ UaCH.12.t:0"Sultan Muhammad is defeated"
+ UaCH.12.d:0"§GSultan Muhammad§! has gathered the full might of the western empire behind him, but was repelled swiftly in this debacle. The bloody conflict seems to have ended with him being ran out of Isfahan, the local nobles executed, while the other princes and governors are holding feasts in victory. For how long, nobody is sure."
+ UaCH.12.a:0"Scorn them all."
+
+ UaCH.15.t:0"The body of Shah Rukh"
+ UaCH.15.d:0"Shah Rukh’s body starts the journey east with Gawhar Shad and Abdal-Latif (son of Ulugh Beg)."
+ UaCH.15.a:0"Send a small honor guard"
+ UaCH.15.b:0"A true heir should  be able to handle this."
+ UaCH.15.c:0"Assemble the Royal guard!"
+ 
+ UaCH.16.t:0"Betrayal"
+ UaCH.16.d:0"'My son.' - begins the letter - 'With heavy heart I hear about my father's demise. For a little time, I have foreseen this outcome, and prepared our forces. There is shame in what I am about to order you, however the good of the Empire and our family must come first, even at the cost of your honor. Your soldiers are prepared do what is necessary."
+ UaCH.16.a:0"Steal that body!"
+ UaCH.16.b:0"Honor that body!   "
+ 
+ UaCH.17.t:0"Betrayal at the winter camp"
+ UaCH.17.d:0"Betrayal! In the middle of the night, a small company of §GAbdal-Latif's§! men turns on Gawhar Shad and holds her and Shah Rukh’s corpse hostage.  Possibly in an effort to back his own claim to the throne, or that of his father, §GUlugh Beg§!. For now, the funeral procession has stalled, as boths sides are awaiting reinforcements."
+ UaCH.17.a:0"Intolerable!"
+ UaCH.17.b:0"I'm dying of shame."
+ #Replace Muhammad Juki with his son Abu Bakr he dies
+ UaCH.17.c:0"Accept the new reality."
+ UaCH.17.d:0"An ambitious young man, too bad about his father..."
+ 
+ UaCH.18.t:0"A Chance to Return"
+ UaCH.18.d:0"Grave news! Sultan Muhammad, upon hearing of Shah Rukh’s death, marches east, retaking Ajam and becoming the Timurid Emperor of Fars. He rewarded the surviving nobles of Isfahan, and many nobles of other regions defected to him. Whilst Isfahan enjoys a tax relief, other regions suffered immensely, with Yazd being heavily taxed, with its emirs being frequently replaced."
+ UaCH.18.a:0"I will not be denied!"
+ ## player should swap to Sultan Muhammad (QOM)
+ UaCH.18.b:0"Hey, Gurkani, get this idiot for us."
+ ## Should still release QOM
+ 
+ UaCH.19.t:0"Return of Sultan Muhammad"
+ UaCH.19.d:0"The strangest news! Sultan Muhammad, upon hearing of Shah Rukh’s death, marches east, retaking Ajam and becoming the Timurid Emperor of Fars. He rewarded the surviving nobles of Isfahan, and many nobles of other regions defected to him. Whilst Isfahan enjoys a tax relief, other regions suffered immensely, with Yazd being heavily taxed, with its emirs being frequently replaced. Now he has sent letters to us for aid once again, promising handsome rewards."
+ UaCH.19.a:0"Our rightful suzerain has returned!"
+ UaCH.19.b:0"That loser is back again?"
+ 
+ UaCH.20.t:0"Return of Sultan Muhammad"
+ UaCH.20.d:0"Sultan Muhammad seems to have forgotten the beating he received last time, as he has rebelled once again. His ragtag armies are bolstered by foreign mercenaries, yet some of our nobles still believe he has a chance to win..."
+ UaCH.20.a:0"You sure are a glutton for punishment.."
+ UaCH.20.b:0"We do not have the strength to fight at this moment."
+ 
+ UaCH.21.t:0"Raids from Balkh"
+ UaCH.21.d:0"Muhammad Juki's son, Abu Bakr, governor of Balkh has launched multiple raids through the border to Transoxiana. While a minor annoyance at first, the attacks soon grew both in boldness and cruelty, until we have managed to capture him a battle."
+ UaCH.21.a:0"Demand that Balkh surrender to us."
+ UaCH.21.b:0"We must keep the peace."
+
+ UaCH.22.t:0"Ultimatum"
+ UaCH.22.d:0"The Prince of Transoxiana has taken Abu Bakr hostage. With the raids now stopped, this has gone beyond reasonable, yet he sent us an ultimatum to surrender without demands."
+ UaCH.22.a:0"We are a Prince of Timur!"
+ UaCH.22.b:0"We reap what we sow."
+ 
+ UaCH.23.t:0"A Shattered Peace"
+ UaCH.23.d:0"The relatively calm period after the flurry of events when Shah Rukh has died, seems to be over. Raids from Balkh have hit Transoxiana's cities, leaving burning and pillaged land behind. In response, Transoxianan troops have captured the governor of Balkh, Abu Bakr. Maybe we should step in to limit further escalation before its too late?"
+ UaCH.23.a:0"Enforce the peace!"
+ UaCH.23.b:0"What Abu Bakr has sown, he is reaping now."
+ 
+ UaCH.24.t:0"Demands from Herat"
+ UaCH.24.d:0"A letter has arrived today from Herat, demanding the cease of hostilities between us and the Emirate of Balkh. This would be a great opportunity to end the bloodshed without further loss of face.... or a chance to break the chains of Herat holding us back."
+ UaCH.24.a:0"If you wish... "
+ UaCH.24.b:0"We bow to no one!"
+ 
+ UaCH.25.t:0""
+ UaCH.25.d:0""
+ UaCH.25.a:0""
+ UaCH.25.b:0""
+ 
+ UaCH.26.t:0""
+ UaCH.26.d:0""
+ UaCH.26.a:0""
+ UaCH.26.b:0""
+ 
+ UaCH.27.t:0""
+ UaCH.27.d:0""
+ UaCH.27.a:0""
+ UaCH.27.b:0""
+ 
+ UaCH.28.t:0""
+ UaCH.28.d:0""
+ UaCH.28.a:0""
+ UaCH.28.b:0""
+ 
+ UaCH.29.t:0""
+ UaCH.29.d:0""
+ UaCH.29.a:0""
+ UaCH.29.b:0""
+ 
+ UaCH.30.t:0""
+ UaCH.30.d:0""
+ UaCH.30.a:0""
+ UaCH.30.b:0""
+ 
+ UaCH.31.t:0""
+ UaCH.31.d:0""
+ UaCH.31.a:0""
+ UaCH.31.b:0""
+ 
+ UaCH.32.t:0""
+ UaCH.32.d:0""
+ UaCH.32.a:0""
+ UaCH.32.b:0""
+ 
+ UaCH.33.t:0""
+ UaCH.33.d:0""
+ UaCH.33.a:0""
+ UaCH.33.b:0""
+ 
+ UaCH.34.t:0""
+ UaCH.34.d:0""
+ UaCH.34.a:0""
+ UaCH.34.b:0""
+ 
+ UaCH.35.t:0""
+ UaCH.35.d:0""
+ UaCH.35.a:0""
+ UaCH.35.b:0""
+ 
+ UaCH.36.t:0""
+ UaCH.36.d:0""
+ UaCH.36.a:0""
+ UaCH.36.b:0""
+ 
+ UaCH.37.t:0""
+ UaCH.37.d:0""
+ UaCH.37.a:0""
+ UaCH.37.b:0""
+ 
+ UaCH.38.t:0""
+ UaCH.38.d:0""
+ UaCH.38.a:0""
+ UaCH.38.b:0""
+ 
+ UaCH.39.t:0""
+ UaCH.39.d:0""
+ UaCH.39.a:0""
+ UaCH.39.b:0""
+ 
+ UaCH.40.t:0""
+ UaCH.40.d:0""
+ UaCH.40.a:0""
+ UaCH.40.b:0""
+ 
+ UaCH.41.t:0""
+ UaCH.41.d:0""
+ UaCH.41.a:0""
+ UaCH.41.b:0""
+ 
+ UaCH.42.t:0""
+ UaCH.42.d:0""
+ UaCH.42.a:0""
+ UaCH.42.b:0""
+ 
+ UaCH.43.t:0""
+ UaCH.43.d:0""
+ UaCH.43.a:0""
+ UaCH.43.b:0""
+ 
+ UaCH.44.t:0""
+ UaCH.44.d:0""
+ UaCH.44.a:0""
+ UaCH.44.b:0""
+ 
+ UaCH.45.t:0""
+ UaCH.45.d:0""
+ UaCH.45.a:0""
+ UaCH.45.b:0""
+ 
+ UaCH.46.t:0""
+ UaCH.46.d:0""
+ UaCH.46.a:0""
+ UaCH.46.b:0""
+ 
+ UaCH.47.t:0""
+ UaCH.47.d:0""
+ UaCH.47.a:0""
+ UaCH.47.b:0""
+ 
+ UaCH.48.t:0""
+ UaCH.48.d:0""
+ UaCH.48.a:0""
+ UaCH.48.b:0""
+
+ 
+ UaCH.49.t:0"Abdal-Latif complies"
+ UaCH.49.d:0"Abdal-Latif has received his fathers letter, and acted accordingly. The body is now en route to our capital and will arive in the next 3 months."
+ UaCH.49.a:0"Good. Good. Our forces will be operational by then."
+
+ UaCH.50.t:0"Abdal Latif defiant!"
+ UaCH.50.d:0"Abdal-Latif has received his fathers letter, but defied his command. The body is now en route to Herat and will arive in the next 3 months."
+ UaCH.50.a:0"Insolent boy!"
+
+ UaCH.51.t:0"Abdul-Latif's demands"
+ UaCH.51.d:0"Abdal-Latif is torn between loyalty to his father and his own ambitions. He ponders if we were offer him not only his fathers realm which is his birthright, he may consider siding with our cause."
+ UaCH.51.a:0"Offer him riches beyond measure. "
+ UaCH.51.b:0"Offer him lands and titles. "
+ UaCH.51.c:0"Make him heir to the Empire"
+ UaCH.51.d:0"He will gain no such thing!"
+ 
+ UaCH.52.t:0""
+ UaCH.52.d:0""
+ UaCH.52.a:0""
+ UaCH.52.b:0""
+ 
+ UaCH.53.t:0""
+ UaCH.53.d:0""
+ UaCH.53.a:0""
+ UaCH.53.b:0""
+ 
+ UaCH.54.t:0"Intercept the body"
+ UaCH.54.d:0"§GShah Rukh's§! corpse cannot fall into anyones hand, but ours! Assemble the army!"
+ UaCH.54.a:0"We ride!"
+ 
+ UaCH.55.t:0"The corpse arrives"
+ UaCH.55.d:0"The emperors corpse has arrived to our capital. We shall build a monument to show the world who his true successor is."
+ UaCH.55.a:0"Do it."
+ 
+ UaCH.56.t:0"Stolen"
+ UaCH.56.d:0"The enemy has occupied our capital, burned and pillaged our cities, and whats worse: has stolen the body of Shah Rukh!"
+ UaCH.56.a:0"Tragedy!"
+ 
+ UaCH.57.t:0"The mausoleum is complete"
+ UaCH.57.d:0"Our loyal servants have reported the completion of the Mausoleum of Shah Rukh. With this done, our legitimacy should no longer be in question."
+ UaCH.57.a:0"Peace shall be upon this land."
+ 
+ UaCH.58.t:0""
+ UaCH.58.d:0""
+ UaCH.58.a:0""
+ UaCH.58.b:0""
+ UaCH.59.t:0""
+ UaCH.59.d:0""
+ UaCH.59.a:0""
+ UaCH.59.b:0""
+ UaCH.60.t:0""
+ UaCH.60.d:0""
+ UaCH.60.a:0""
+ UaCH.60.b:0""
+ UaCH.61.t:0""
+ UaCH.61.d:0""
+ UaCH.61.a:0""
+ UaCH.61.b:0""
+ UaCH.62.t:0""
+ UaCH.62.d:0""
+ UaCH.62.a:0""
+ UaCH.62.b:0""
+ UaCH.63.t:0""
+ UaCH.63.d:0""
+ UaCH.63.a:0""
+ UaCH.63.b:0""
+ UaCH.64.t:0""
+ UaCH.64.d:0""
+ UaCH.64.a:0""
+ UaCH.64.b:0""
+ UaCH.65.t:0""
+ UaCH.65.d:0""
+ UaCH.65.a:0""
+ UaCH.65.b:0""
+ UaCH.66.t:0""
+ UaCH.66.d:0""
+ UaCH.66.a:0""
+ UaCH.66.b:0""
+ UaCH.67.t:0""
+ UaCH.67.d:0""
+ UaCH.67.a:0""
+ UaCH.67.b:0""
+ UaCH.68.t:0""
+ UaCH.68.d:0""
+ UaCH.68.a:0""
+ UaCH.68.b:0""
+ UaCH.69.t:0""
+ UaCH.69.d:0""
+ UaCH.69.a:0""
+ UaCH.69.b:0""
+ UaCH.70.t:0""
+ UaCH.70.d:0""
+ UaCH.70.a:0""
+ UaCH.70.b:0""
+ UaCH.71.t:0""
+ UaCH.71.d:0""
+ UaCH.71.a:0""
+ UaCH.71.b:0""
+ UaCH.72.t:0""
+ UaCH.72.d:0""
+ UaCH.72.a:0""
+ UaCH.72.b:0""
+ UaCH.73.t:0""
+ UaCH.73.d:0""
+ UaCH.73.a:0""
+ UaCH.73.b:0""
+ UaCH.74.t:0""
+ UaCH.74.d:0""
+ UaCH.74.a:0""
+ UaCH.74.b:0""
+ UaCH.75.t:0""
+ UaCH.75.d:0""
+ UaCH.75.a:0""
+ UaCH.75.b:0""
