Valentines Events, Fix Qom Colour

--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -311,14 +311,16 @@
   shy_war_of_independence_ensured:0 "Upon the death of the ruler of the @SHY §YShaybanids§!, @KZH §YKazakh§! will rebel with a unique Independence Casus Belli."
   UaCH.61.b:0 "We have greater concerns than these tribal feuds."
 
-  UaCH.62.t:0""
-  UaCH.62.d:0""
-  UaCH.62.a:0""
-  UaCH.62.b:0""
-  UaCH.63.t:0""
-  UaCH.63.d:0""
-  UaCH.63.a:0""
-  UaCH.63.b:0""
+  UaCH.62.t:0 "Care of the Empress-Dowager"
+  UaCH.62.d:0 "In Shah Rukh's twilight years full of illness, Gawhar Shad has grown to become his main caretaker. Whilst not particularly unusual, the closeness the two share is rather unusual, given that the marriage started political in nature in order for a group of notables in Herat to appease Shah Rukh. However, the reason for the marriage matters not anymore, for the two truly care for eachother, and Gawhar Shad has taken more responsibility than ever before to ensure that order is maintained.\n\nWhilst all know that Shah Rukh's time looms, it is Gawhar Shad who has arguably kept him alive for this long, despite her schemeing regarding his succession. No doubt that Shah Rukh is grateful to have someone who cares enough to be by his side even as he nears his final breath."
+  UaCH.62.a:0 "A truly beautiful marriage of love."
+
+  UaCH.63.t:0 "Patronage of Shah Rukh and Gawhar Shad"
+  UaCH.63.d:0 "If there is one thing that Shah Rukh has become known for, it's the patronage of the arts and Persian culture that has occurred under his rule, with the assistance of his favorite wife, Gawhar Shad. The court has been moved from Samarkand to Herat in order to better establish a Persianized state, the Persian language has replaced Chagatai as the main language of government, and a vibrant court of artists, architects, and poets has been maintained. Under their joint patronage, elaborate mosques have been built in Herat and Mashhad, with a distinct mixture of cultural styles. Literature, much like government, has become primarily Persian once more, with Chagatai and Arabic still holding major sway as well. Islamic law has superseded the Mongol law Timur put in place, and the state has become far more concerned with portraying itself as a proper Iranian state. Already, Iran has once again began to prosper, and if Shah Rukh's successor keeps this patronage of the arts in place, it is likely that the Timurid state will become not unlike those before it that became nothing more than another Persian empire.\n\nSadly, given the scheming of the Princes, this prosperity seems to be nothing but a brief glimmer of hope..."
+  UaCH.63.a:0 "Truly a testament to how much two can achieve!"
+  uach_patronage_of_the_couple:0 "Patronage of the Couple"
+  uach_herat_prosperity:0 "§YHerat§! and it's surrounding regions will experience §Gprosperity§!!"
+
   UaCH.64.t:0""
   UaCH.64.d:0""
   UaCH.64.a:0""
