--- a/UaCH/localisation/UaCH_startup_l_english.yml
+++ b/UaCH/localisation/UaCH_startup_l_english.yml
@@ -10,6 +10,15 @@
  string_start_title_AFG:0"The situation of Afghanistan in 1444"
  string_start_AFG:0 "In Kabul's streets, a vibrant mosaic thrives,\n where cultures blend and every story survives.\nThrough war and peace, its people endure,\ntheir resilience a testament, steadfast and pure\n - §YMimi Khalvati§!\n\n §RHistory§! \n\nThe Pasthun people of Afghanistan have experienced a relatively peaceful period of time during §GTimur's§! reign as part of his empire, however that all changed with his death. The sucession period has seen the capital city of Kabul change hands from time to time, and ethnic clashes between the different tribes became common. While §GShah Rukh§! has managed to calm these calamitous times considerably, news of his illness may just reignite the flames... \n\n §RRuler§! \n\nAfghanistan is governed by §GKaratshar bin Soyurghatmish§! , a late descendant of Khan Soyurghatmish, and brother to the wife of §GUlugh beg§!. His claims on his land are flimsy at best, but maybe there is a burning desire to be named Khan once again...."
  
+ string_screen_title_ARD:0"Ardalan - Home of the Kurds"
+ string_start_title_ARD:0"The situation of Ardalan in 1444"
+ string_start_ARD:0"O history, either I will adorn you with freedom, or I will consider you as I have not lived you. \n -§YAbdullah Ocalan§! \n\n §RHistory§! \n\n§YArdalan§! is a hereditary Kurdish kingdom in the western parts of Persia. While once part of §GTimur's§! great empire, the decline after his death and the rise of the §YQara Qoyunlu§! alliance, Ardalan's position is not enviable. \n\n §RRuler§! \n\n In 1444, Ardalan is ruled by §GBawa Ardalan§!, a far removed descendant of §GSaladin§!. He accepted vassalage to §GSultan Muhammad§! of §YAjam§!, hoping to be protected from the Black Sheep." 
+ 
+ string_screen_title_SHY:0"Shaybanids - The Gray Horde"
+ string_start_title_SHY:0"The situation of Uzbeks in 1444"
+ string_start_SHY:0"\Without Fortune and prospect, I ignite the fire\nOf impatience – the guards of prudence have vanished\nMy caravan defenseless in the coming fire.\nA lightening flash has struck and changed me utterly.\n - §YAli-Shir Nava'i§!n\n §RHistory§! \n\n The Shaybanid dynasty rules over the various Uzbek tribes of the central asian steppes. While not as organized as the Muslim emirates to the south, and suffering from internal stability issues, the tribes of Uzbek, Sibir and Kazakh bow to the descendants of §GJochi§!. For now at least. \n\n §RRuler§! \n\n In 1444, the Shaybanids are ruled by §GAbu'l-Khayr§! khan.  Abu'l-Khayr's has swiftly consolidated his power since taking the throne in 1428, and been eyeing the south for a while now. Who knows what opportunites arise with the impeding death of §GShah Rukh§!?"
+ 
+ 
  # NEW STARTING TAGS
 
  string_screen_title_BLK:0"Balkh - The Mother of Cities"
